--- a/ConsoleApp/Properties/Resources.resx
+++ b/ConsoleApp/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Address" xml:space="preserve">
+    <value>Address</value>
+  </data>
   <data name="AllFiles" xml:space="preserve">
     <value>All files</value>
   </data>
@@ -131,6 +134,9 @@
   </data>
   <data name="LastName" xml:space="preserve">
     <value>Last name</value>
+  </data>
+  <data name="NamedayDate" xml:space="preserve">
+    <value>Nameday date</value>
   </data>
   <data name="UnknownCommand" xml:space="preserve">
     <value>Unknown command</value>
